Add 'isFavourite' and 'imageUrl' fields in the database and updated Dao queries

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ gson = "2.10.1"
 kotlinxSerializationJson = "1.6.3"
 retrofit2KotlinxSerializationConverter = "1.0.0"
 hiltNavigationCompose = "1.2.0"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.0-beta01"
 room = "2.6.1"
 pagingCompose = "3.3.0"
 pagingRuntimeKtx = "3.3.0"
