--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,10 +22,12 @@ room = "2.6.1"
 pagingCompose = "3.3.0"
 pagingRuntimeKtx = "3.3.0"
 roomPaging = "2.7.0-alpha02"
-material3Android = "1.2.1"
 lifecycleRuntimeCompose = "2.8.0"
 lifecycleViewmodelCompose = "2.8.0"
 pagingCommon = "3.3.0"
+coil = "2.6.0"
+material = "1.7.0-beta01"
+runtimeLivedata = "1.6.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -66,6 +68,10 @@ androidx-room-paging = { group = "androidx.room", name = "room-paging", version.
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-paging-common = { group = "androidx.paging", name = "paging-common", version.ref = "pagingCommon" }
+
+coil-compose = {group = "io.coil-kt", name = "coil-compose", version.ref = "coil"}
+androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
