--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -28,11 +28,25 @@ pagingCommon = "3.3.0"
 coil = "2.6.0"
 material = "1.7.0-beta01"
 runtimeLivedata = "1.6.7"
+pagingTesting = "3.3.0"
+mockk = "1.13.11"
+kotlinCoroutines = "1.8.1"
+hiltTesting = "2.51.1"
+junitKtx = "1.1.5"
+coreTesting = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+mockk = {group = "io.mockk", name = "mockk", version.ref = "mockk"}
+hilt-android-testing = {group = "com.google.dagger", name = "hilt-android-testing", version.ref= "hiltTesting"}
+#kotlinx-coroutines-test = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines", version.ref = "kotlinCoroutines"}
+#kotlinx-coroutines-core = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinCoroutines"}
+#kotlinx-coroutines = {group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines", version.ref = "kotlinCoroutines"}
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+core-testing = {group = "androidx.arch.core", name = "core-testing", version.ref = "coreTesting"}
+
+
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -54,6 +68,7 @@ hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "dagge
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "daggerHilt" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version = "1.2.0" }
 
+
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
@@ -72,6 +87,8 @@ androidx-paging-common = { group = "androidx.paging", name = "paging-common", ve
 coil-compose = {group = "io.coil-kt", name = "coil-compose", version.ref = "coil"}
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+androidx-paging-testing = { group = "androidx.paging", name = "paging-testing", version.ref = "pagingTesting" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
